git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@93 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -20,6 +20,18 @@
 <message\_declaration> ::= <identifier>`{'<identifier> `:' <identifier> \{`,'<identifier> `:' <identifier>\}`}' `{'<code\_block>`}'
 
 <class> ::= `class' <identifier> `{' <class body> `}'
+
+<message sending> ::= <object> `->' <message>
+
+<block code> ::= { <statement>? }
+<while statement> ::= `while' `(' <expression> `)'  `{'<block code>`}'
+<if statement> ::= `if' `(' <expression> `)'  `{'<block code>`}'
+
+<statement> ::= <expression>
+\alt <assignment expression>
+
+<assignment expression> ::= <identifier> `=' <expression>
+\alt {<digits>}
 \end{grammar}
 
 
