--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -19,7 +19,7 @@
 
 <message> ::= `{'<identifier> \{`,' <expression>\}`}'
 
-<message\_sending> ::= <element> `-\>' <message>
+<message\_sending> ::= <element> `\<-' <message>
 
 <element> ::= <identifier> 
 \alt<message\_sending>
@@ -28,7 +28,7 @@
 \alt true \alt false
 
 
-<instantiation> ::= <class\_identifier> `-\>' `{new' \{`,' <expression>\}`}'
+<instantiation> ::= <class\_identifier> `\<-' `{new' \{`,' <expression>\}`}'
 
 
 <assignment\_expression> ::= <identifier> `=' <element>
