git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@96 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -17,6 +17,8 @@
 
 <class\_identifier> ::= `A..Z' \{ `a..z,A..Z,\_,0..9,'\} 
 
+<array> ::= `{'\{`,' <expression>\}`}'
+
 <message> ::= `{'<identifier> \{`,' <expression>\}`}'
 
 <message\_sending> ::= <element> `\<-' <message>
@@ -26,6 +28,8 @@
 \alt<instantiation>
 \alt<digits>
 \alt true \alt false
+\alt <message>
+\alt <array>
 
 
 <instantiation> ::= <class\_identifier> `\<-' `{new' \{`,' <expression>\}`}'
