git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@97 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -17,7 +17,7 @@
 
 <class\_identifier> ::= `A..Z' \{ `a..z,A..Z,\_,0..9,'\} 
 
-<array> ::= `{'\{`,' <expression>\}`}'
+<array> ::= `{'`}' \alt `{'<expression>`}' \alt `{' <expression> \{`,' <expression>\}`}'
 
 <message> ::= `{'<identifier> \{`,' <expression>\}`}'
 
