git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@98 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -21,7 +21,7 @@
 
 <message> ::= `{'<identifier> \{`,' <expression>\}`}'
 
-<message\_sending> ::= <element> `\<-' <message>
+<message\_sending> ::= <element> `<-' <message>
 
 <element> ::= <identifier> 
 \alt<message\_sending>
@@ -32,7 +32,7 @@
 \alt <array>
 
 
-<instantiation> ::= <class\_identifier> `\<-' `{new' \{`,' <expression>\}`}'
+<instantiation> ::= <class\_identifier> `<-' `{new' \{`,' <expression>\}`}'
 
 
 <assignment\_expression> ::= <identifier> `=' <element>
