--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -17,7 +17,7 @@
 
 <class\_identifier> ::= `A..Z' \{ `a..z,A..Z,\_,0..9,'\} 
 
-<array> ::= `{'`}' \alt `{'<expression>`}' \alt `{' <expression> \{`,' <expression>\}`}'
+<array> ::= `{'`}' \alt `{' <expression> \{`,' <expression>\}`}'
 
 <message> ::= `{'<identifier> \{`,' <expression>\}`}'
 
