--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -17,7 +17,7 @@
 
 <class\_identifier> ::= `A..Z' \{ `a..z,A..Z,\_,0..9,'\} 
 
-<array> ::= `{'`}' \alt `{' <element> \{`,' <element>\}`}'
+<tuple> ::= `{'`}' \alt `{' <element> \{`,' <element>\}`}'
 
 <message> ::= `{'<identifier> \{`,' <element>\}`}'
 
@@ -32,7 +32,7 @@
 \alt <boolean\_value>
 \alt <operation>
 \alt <message>
-\alt <array>
+\alt <tuple>
 
 <operation> ::= <element> <binary\_operator> <element>
 \alt <unary\_operator> <element>
@@ -88,8 +88,8 @@ We would define some basic classes to store data.
 
 \begin{itemize}
 	\item \textbf{Integer} objects would represent real numbers. 
-	\item \textbf{Boolean} objects that would represent a <boolean\_value>.
-	\item \textbf{Array} 
+	\item \textbf{Boolean} objects would represent a <boolean\_value>.
+	\item \textbf{Tuple} objects would represent a collection (a <tuple> corresponds to a Tuple object).
 \end{itemize}
 
 
