git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@104 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -88,8 +88,8 @@ We would define some basic classes to store data.
 
 \begin{itemize}
 	\item \textbf{Integer} objects would represent real numbers. 
-	\item \textbf{Boolean} objects would represent a <boolean\_value>.
-	\item \textbf{Tuple} objects would represent a collection (a <tuple> corresponds to a Tuple object).
+	\item \textbf{Boolean} objects would represent a $<$boolean\_value$>$.
+	\item \textbf{Tuple} objects would represent a collection (a $<$tuple$>$ corresponds to a Tuple object).
 \end{itemize}
 
 
