--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -87,9 +87,11 @@
 We would define some basic classes to store data. 
 
 \begin{itemize}
-	\item \textbf{Integer} objects would represent real numbers. 
-	\item \textbf{Boolean} objects would represent a $<$boolean\_value$>$.
-	\item \textbf{Tuple} objects would represent a collection (a $<$tuple$>$ corresponds to a Tuple object).
+	\item \textbf{Integer} represents real numbers. 
+	\item \textbf{Boolean} represents a $<$boolean\_value$>$.
+	\item \textbf{Tuple} represents a collection (a $<$tuple$>$ corresponds to a Tuple object).
+	\item \textbf{Message} is a subclass of Tuple and represents a $<$message$>$.
+	\item \textbf{Stdio} represents the standard input and output. 
 \end{itemize}
 
 
