git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@107 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -124,6 +124,8 @@ or & or \\
 
 
 \section{Examples}
+
+\begin{lstlisting}
 class Point{
     x;
     y;
@@ -163,4 +165,5 @@ p2 = Point <- {new,13 ,28} + p
 
 stdout <- {print, p > p2}
 
+\end{lstlisting}
 \end{document}
