add extends in class add # as element to the current message
git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@108 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -35,6 +35,7 @@
 \alt <operation>
 \alt <message>
 \alt <tuple>
+\alt #
 
 <operation> ::= <element> <binary\_operator> <element>
 \alt <unary\_operator> <element>
@@ -66,7 +67,7 @@
 
 
 
-<class> ::= `class' <class\_identifier> `{' <class body> `}'
+<class> ::= `class' <class\_identifier> (extends <identifier>)? `{' <class body> `}'
 
 <class\_body> ::= \{<attribute\_declaration>\} \{<message\_declaration>\}
 
