add self and super to have an element that represent the super object and the current object
git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@109 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -35,7 +35,7 @@
 \alt <operation>
 \alt <message>
 \alt <tuple>
-\alt #
+\alt # | self | super
 
 <operation> ::= <element> <binary\_operator> <element>
 \alt <unary\_operator> <element>
