git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@118 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2365-Constraint_programming/Assignment1/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment1/document.tex
@@ -4,7 +4,7 @@
 
 \newcommand{\docType}	{Assignment 1}
 \newcommand{\docDate}	{24/02/2012}
-\newcommand{\docAuthor}	{Mulders Corentin, Pelsser Francois}
+\newcommand{\docAuthor}	{gr16 : Mulders Corentin, Pelsser Francois}
 \newcommand{\courseCode}{LINGI2365}
 \newcommand{\courseName}{Constraint programming}
 \usepackage{syntax}
