git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@120 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -144,7 +144,7 @@ to create an instance of a class.  The number of arguments depends of the
 definition of the new message(s) in the class.  The second, "default", is called
 when the object received a message wich is not in its managed messages or in 
 managed messages of one of its parents, this method can get the message to send 
-it to another object with the caracter "\#". %TODO character caracter?
+it to another object with the character "\#". 
 
 
 Every class attribute of the class have to be declared at the beginning of this one.  
